# ali-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  HOOKS.md  README.md  README.tpl
.github/workflows/: artifacts.yaml  audit.yaml  cargo_test.yaml  clippy.yaml  clippy_release.yaml  prune-gh-workflows.yaml  prune-workflows.yaml  release-build-upload.yaml  release-clippy.yaml  release-create.yaml  release.yaml  rustfmt.yaml  test.yaml
mock_cmd/: blkid  lvs  pvs
src/: cli.rs  constants.rs  defaults.rs  disks.rs  entity.rs  errors.rs  main.rs  run.rs  sanity.rs
src/ali/: mod.rs
src/ali/apply/: apply_stages.rs  archchroot.rs  bootstrap.rs  disks.rs  dm.rs  fs.rs  map_err.rs  mod.rs  routine.rs  routines.rs  stages.rs
src/ali/examples/: uefi-root-on-lvm-on-luks.yaml  uefi-root-on-lvm.yaml
src/ali/validation/: hooks.rs  mod.rs
src/entity/: action.rs  blockdev.rs  mod.rs  report.rs  stage.rs
src/hooks/: constants.rs  download.rs  mkinitcpio.rs  mod.rs  quicknet.rs  replace_token.rs  uncomment.rs  utils.rs  wrappers.rs
src/hooks/utils/: download.rs  mod.rs  replace_token.rs
src/linux/: fdisk.rs  luks.rs  lvm.rs  mkfs.rs  mod.rs  mount.rs  user.rs
src/manifest/: mod.rs  validation.rs
src/manifest/apply/: archchroot.rs  disks.rs  dm.rs  fs.rs  mod.rs  routine.rs
src/manifest/examples/: uefi-root-on-lvm-on-luks.yaml  uefi-root-on-lvm.yaml
src/manifest/validation/: dm.rs  mod.rs  (+1 more)
src/run/: apply.rs  hooks.rs  mod.rs  validate.rs
src/types/: blockdev.rs  stage.rs
src/utils/: fs.rs  mod.rs  shell.rs
test_assets/: foo.conf
test_assets/mock_cmd/: lvs  pvs
(+22 files in other folders)
