[package]
name = "ali-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.7"
serde_json = "1.0"
humanize-rs = ">=0.1.5"

[badges]
github = { repository = "soyart/ali-rs", workflow = "cargo_test" }
maintenance = { status = "actively-developed" }