[package]
name = "ali-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.7"
serde_json = "1.0"
humanize-rs = ">=0.1.5"
shlex = ">=1.2"
pwhash = "1"
colored = ">=2"
ureq = ">=2.8"
nix = { version = ">=0.27", features = ["user"] }

[badges]
github = { repository = "soyart/ali-rs", workflow = "cargo-test" }
maintenance = { status = "actively-developed" }
